--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
-}
+#box{
+  width:800px;
+  margin: 0 auto;
+  border:2px solid #666;
+  padding:25px;
+  box-sizing:border-box;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#btn{
+  text-align:center;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom:25px;
 }
-
-.App-link {
-  color: #61dafb;
+#btn>button{
+  padding:20px 50px;
+  border:none;
+  color:#fff;
+  margin: 0 25px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#btn>button:first-child{
+  background-color:red;
+}
+#btn>button:last-child{
+  background-color:blue;
+}
+#container{
+  display:flex;
+  justify-content:space-evenly ;
+  border: 1px solid #666;
+  text-align:center;
 }
